# Ariadne

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/ariadne/: __init__.py  cli.py
tests/: test_cli.py
