[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariadne"
version = "0.1.0"
description = "A beginner-to-LLM educational chatbot project."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mystiatech" }]
dependencies = []

[project.scripts]
ariadne = "ariadne.cli:main"

[project.optional-dependencies]
dev = [
  "black==24.8.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pytest>=8.1.0",
  "pre-commit>=3.7.0",
  "typing-extensions>=4.12.0",
]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["ariadne"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
